--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mjusta <mjusta@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/20 11:21:19 by mjusta            #+#    #+#              #
-#    Updated: 2025/05/29 14:49:39 by mjusta           ###   ########.fr        #
+#    Updated: 2025/06/13 02:35:40 by mjusta           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,67 +20,71 @@ AR = ar rcs
 # c = Don't warn if the archive had to be created
 # s = Create an archive index (time saving)
 
-SRC = ft_isalpha.c \
-		ft_isdigit.c \
-		ft_isalnum.c \
-		ft_isascii.c \
-		ft_isprint.c \
-		ft_strlen.c \
-		ft_memset.c \
-		ft_bzero.c \
-		ft_memcpy.c \
-		ft_memmove.c \
-		ft_strlcpy.c \
-		ft_strlcat.c \
-		ft_toupper.c \
-		ft_tolower.c \
-		ft_atoi.c \
-		ft_strchr.c \
-		ft_strrchr.c \
-		ft_strnstr.c \
-		ft_strncmp.c \
-		ft_strdup.c \
-		ft_memchr.c \
-		ft_memcmp.c \
-		ft_calloc.c \
-		ft_putchar_fd.c \
-		ft_putstr_fd.c \
-		ft_putendl_fd.c \
-		ft_putnbr_fd.c \
-		ft_itoa.c \
-		ft_split.c \
-		ft_substr.c \
-		ft_striteri.c \
-		ft_strtrim.c \
-		ft_strjoin.c \
-		ft_strmapi.c
+INC_DIR = include
+SRC_DIR = src
+OBJ_DIR = build
 
-BONUS_SRC = ft_lstnew_bonus.c \
-			ft_lstadd_front_bonus.c \
-			ft_lstsize_bonus.c \
-			ft_lstlast_bonus.c \
-			ft_lstadd_back_bonus.c \
-			ft_lstdelone_bonus.c \
-			ft_lstclear_bonus.c \
-			ft_lstiter_bonus.c \
-			ft_lstmap_bonus.c
-		
-OBJ = $(SRC:.c=.o)
-BONUS_OBJ = $(BONUS_SRC:.c=.o)
+SRC = \
+		src/char/ft_isalnum.c \
+		src/char/ft_isalpha.c \
+		src/char/ft_isascii.c \
+		src/char/ft_isdigit.c \
+		src/char/ft_isprint.c \
+		src/conversion/ft_atoi.c \
+		src/conversion/ft_itoa.c \
+		src/conversion/ft_tolower.c \
+		src/conversion/ft_toupper.c \
+		src/memory/ft_bzero.c \
+		src/memory/ft_calloc.c \
+		src/memory/ft_memchr.c \
+		src/memory/ft_memcmp.c \
+		src/memory/ft_memcpy.c \
+		src/memory/ft_memmove.c \
+		src/memory/ft_memset.c \
+		src/string/ft_strchr.c \
+		src/string/ft_strdup.c \
+		src/string/ft_strlcpy.c \
+		src/string/ft_strlcat.c \
+		src/string/ft_strlen.c \
+		src/string/ft_strncmp.c \
+		src/string/ft_strnstr.c \
+		src/string/ft_strrchr.c \
+		src/string/ft_split.c \
+		src/string/ft_striteri.c \
+		src/string/ft_strjoin.c \
+		src/string/ft_strmapi.c \
+		src/string/ft_strtrim.c \
+		src/string/ft_substr.c \
+		src/output/ft_putchar_fd.c \
+		src/output/ft_putstr_fd.c \
+		src/output/ft_putendl_fd.c \
+		src/output/ft_putnbr_fd.c \
+		src/list/ft_lstnew.c \
+		src/list/ft_lstadd_front.c \
+		src/list/ft_lstsize.c \
+		src/list/ft_lstlast.c \
+		src/list/ft_lstadd_back.c \
+		src/list/ft_lstdelone.c \
+		src/list/ft_lstclear.c \
+		src/list/ft_lstiter.c \
+		src/list/ft_lstmap.c \
+		src/printf/ft_printf.c \
+		src/printf/ft_printf_utils.c \
+
+OBJ = $(SRC:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(AR) $(NAME) $(OBJ)
 
-bonus: $(OBJ) $(BONUS_OBJ)
-	$(AR) $(NAME) $(OBJ) $(BONUS_OBJ)
-
-%.o: %.c
-	$(CC) $(CFLAGS) -I. -c $< -o $@
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
+	@mkdir -p $(dir $@)
+	$(CC) $(CFLAGS) -I$(INC_DIR) -c $< -o $@
 
 clean:
-	$(RM) $(OBJ) $(BONUS_OBJ)
+	$(RM) $(OBJ)
+	@test -d $(OBJ_DIR) && find $(OBJ_DIR) -type d -empty -delete || true
 
 fclean: clean
 	$(RM) $(NAME)
@@ -89,6 +93,3 @@ re: fclean all
 
 .PHONY: all bonus clean fclean re
 
-#so:
-#	$(CC) -nostartfiles -fPIC $(CFLAGS) $(SRC) $(BONUS_OBJ)
-#	gcc -nostartfiles -shared -o libft.so $(OBJ) $(BONUS_OBJ)
