added gnl to libft

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mjusta <mjusta@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/20 11:21:19 by mjusta            #+#    #+#              #
-#    Updated: 2025/06/13 02:35:40 by mjusta           ###   ########.fr        #
+#    Updated: 2025/06/13 18:36:16 by mjusta           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -70,6 +70,8 @@ SRC = \
 		src/list/ft_lstmap.c \
 		src/printf/ft_printf.c \
 		src/printf/ft_printf_utils.c \
+		src/gnl/get_next_line.c \
+		src/gnl/get_next_line_utils.c \
 
 OBJ = $(SRC:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
